added expert search endpoint
